fixed timezones and working on mobile checkbox now

--- a/task_planner_react/src/MobileStyling.css
+++ b/task_planner_react/src/MobileStyling.css
@@ -159,7 +159,6 @@ div.mobileOnly .custom-checkbox {
   margin-right: 3.5vw;
   width: 10px;
   height: 10px;
-  background-color: white !important;
   border-radius: 50%;
   border: 2px solid #a4a4a4;
   cursor: pointer;
